<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eventorias</string>
    <string name="select_picture">Select a photo</string>
    <string name="no_select_photo">No image selected</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>

    //Error component
    <string name="error">Error</string>
    <string name="error_display">An error has occurred,</string>
    <string name="try_later">please try again later</string>
    <string name="try_again">Try again</string>

    //EventCard
    <string name="profile_picture_description">User account profile picture</string>

    //AuthScreen
    <string name="google_sign_in">Sign in with Google</string>
    <string name="email_sign_in">Sign in with email</string>
    <string name="auth_error_connection">Sign-in failed.</string>


    //EventListScreen
    <string name="event_list_tittle">Event List</string>
    <string name="search">Search for an event</string>
    <string name="no_events_to_display">No events to display</string>
        //Accessibility
    <string name="sort_order_chronological">Sort in chronological order</string>
    <string name="sort_order_reverse_chronological">Sort in reverse chronological order</string>
    <string name="sorted_chronological">Events are now sorted in chronological order</string>
    <string name="sorted_reverse_chronological">Events are now sorted in reverse chronological order</string>
    <string name="search_toggle_open">Show search</string>
    <string name="search_toggle_close">Hide search</string>
    <string name="search_announcement_open">Search is now visible</string>
    <string name="search_announcement_close">Search is now hidden</string>


    //UserProfileScreen
    <string name="user_profile_tittle">User profile</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="error_load_user">Error to load user profile</string>
    <string name="error_update_notification">Error updating notification setting</string>
    <string name="notification">Notification</string>
        //Accessibility
    <string name="user_name_is">The user\'s name is: %1$s</string>
    <string name="user_email_is">The user\'s email is: %1$s</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="toggle_notifications">Enable or disable notifications</string>
    <string name="notification_enabled">Notification enabled</string>
    <string name="notification_disabled">Notification disabled</string>



    //AddScreen
    <string name="add_tittle">Creation of an event</string>
    <string name="title">Title</string>
    <string name="new_event">New event</string>
    <string name="description">Description</string>
    <string name="label_description">Tap here to enter your description</string>
    <string name="date">Date</string>
    <string name="label_date">MM/DD/YYYY</string>
    <string name="time">Time</string>
    <string name="label_time">HH:MM</string>
    <string name="address">Address</string>
    <string name="label_address">Enter full address</string>
    <string name="validate">Validate</string>
        //Error
    <string name="error_empty_title">Enter the title of event to continue</string>
    <string name="error_empty_description">Enter the description of event to continue</string>
    <string name="error_empty_date">Enter the date of event to continue</string>
    <string name="error_empty_hour">Enter the hour of event to continue</string>
    <string name="error_empty_address">Enter the address of event to continue</string>
    <string name="error_invalid_date">Incorrect date format</string>
    <string name="error_invalid_hour">Incorrect hour format</string>
    <string name="success_message">Event added successfully</string>
    <string name="success_false_message">Error adding event</string>
        //Accessibility
    <string name="back_button">Back</string>
    <string name="title_field">Title Field</string>
    <string name="description_field">Description Field</string>
    <string name="date_field">Date Field</string>
    <string name="hour_field">Hour Field</string>
    <string name="address_field">Address Field</string>
    <string name="photo_pickerPhoto">Take a photo for the event</string>
    <string name="photo_picker">Select a photo for the event</string>
    <string name="validate_button">Validate Event</string>
    <string name="selected_photo">Selected Image</string>


    //DetailScreen
    <string name="error_id">Missing event ID</string>
    <string name="error_load_event">Error loading event</string>
    <string name="map_preview_content_description">Static map preview of the event</string>

    //EventDetailContent Accessibility
    <string name="event_image_description">Event image</string>
    <string name="profile_image_description">Organizer profile picture</string>
    <string name="event_date_description">Event date</string>
    <string name="event_time_description">Event time</string>
    <string name="event_description_description">Event description</string>
    <string name="event_address_description">Event address</string>


</resources>